Fixed scrollbar issue

--- a/apps/workmanager/src/app/header/preview/quick-find/qf-modal/qf-modal.component.scss
+++ b/apps/workmanager/src/app/header/preview/quick-find/qf-modal/qf-modal.component.scss
@@ -1,11 +1,11 @@
-.filters {
-  display: flex;
-  flex-direction: column;
-  row-gap: 0.5rem;
-  padding: 2rem 1.5rem 0 1.5rem;
-}
-
-.search-results {
+.qf-search-container {
+  margin: 1.5rem 0;
   overflow: auto;
-  margin: 0.125rem 0 1.5rem 0;
+
+  &__filters {
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5rem;
+    padding: 0 1.5rem;
+  }
 }
